--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,12 +1,12 @@
 html {
-    background-color: rgba(27, 38, 54, 1);
+    background-color: #e3e8f0;
     text-align: center;
-    color: white;
+    color: #1b1f26;
 }
 
 body {
     margin: 0;
-    color: white;
+    color: #1b1f26;
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
